--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
@@ -1,6 +1,41 @@
 //Bright Sign Web-App
 
 
-body{
-  background: grey;
+/* ACTIVE STATE */
+/* Main Container for Map */
+#main-container{
+  background: red;
+  height: 75vh;
+  width: 100vw;
+  position:absolute;
+}
+
+/*NAVIGATION MENU*/
+#nav-menu{
+  background: black;
+  height: 25vh;
+  position: fixed;
+  margin-top: 75vh;
+  width: 100vw;
+
+  .main-nav{
+    height: 25vh;
+  }
+
+  .nav-item{
+    background: blue;
+  }
+
+  .item-cont{
+    background: aqua;
+  }
+
+}
+
+/*IDLE*/
+#idle-cont{
+  height: 100vh;
+  width: 100vw;
+  position:absolute;
+
 }
