--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
@@ -1,16 +1,9 @@
-<!--
-        TEMPLATE WITH TWO CONTAINERS FOR CONTENT
-        (IE. two containers for templates)
-        ----------------------------------------
-        1. THE CHANGING MAIN SCREEN CONTENT
-        2. BOTTOM NAVIGATION
--->
-<div ui-view id="main-container">
-    <div class="map">
 
+<div id="main-container">
+
+    <div class="map" layout="column" layout-align="center center">
+      <h1>MAP!</h1>
+      
     </div>
+
 </div>
-
-
-<div ui-view="navigation" id="nav-container"></div>
-
