--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
@@ -2,8 +2,9 @@
 <div id="main-container">
 
     <div class="map" layout="column" layout-align="center center">
-      <h1>MAP!</h1>
-      
+      <!-- <h1>MAP!</h1> -->
+      <!-- <img class='map' ng-src='{{imgsrc}}'/> -->
+      <!-- <img src="../media/map.png"/> -->
     </div>
 
 </div>
