html template tweaks

--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
@@ -1,5 +1,9 @@
-//Bright Sign Web-App
+/*
+* BRIGHTSIGN MEDIA PLAYER WEB APP
+* @desc		Main SASS File
+*/
 
+/* SETTINGS */
 
 /* ACTIVE STATE */
 /* Main Container for Map */
@@ -54,5 +58,4 @@
   height: 100vh;
   width: 100vw;
   position:absolute;
-
 }
