--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/views/navigation.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/views/navigation.html
@@ -2,9 +2,17 @@
 
   <div layout="row" class="main-nav" layout-align="space-around center" >
 
-      <div flex layout="row" layout-align="center center" class="nav-item" ng-repeat="ind in inds" ng-click="sendUDP(ind.udp)">
+      <!--WORKS! BUT DIRECT CLICK TO UDP-->
+      <!--<div flex layout="row" layout-align="center center" class="nav-item" ng-repeat="ind in inds" ng-click="sendUDP(ind.udp)">-->
+          <!--<div flex class="item-cont" layout="column" layout-align="space-around center" layout-margin>-->
+              <!--&lt;!&ndash;<h5 class="item-header">{{ind.title}}</h5>&ndash;&gt;-->
+              <!--<h2 class="item-title">{{ind.industry}}</h2>-->
+          <!--</div>-->
+      <!--</div>-->
+
+      <div flex layout="row" layout-align="center center" class="nav-item" ng-class="{active : activeId === $index}" ng-repeat="ind in inds" ng-click="industryBtn($index)">
           <div flex class="item-cont" layout="column" layout-align="space-around center" layout-margin>
-              <h5 class="item-header">{{ind.title}}</h5>
+              <!--<h5 class="item-header">{{ind.title}}</h5>-->
               <h2 class="item-title">{{ind.industry}}</h2>
           </div>
       </div>
@@ -12,3 +20,6 @@
   </div>
 
 </div>
+
+<!--SCRATCH-->
+
