--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
@@ -1,9 +1,6 @@
 /*
 * BRIGHTSIGN MEDIA PLAYER WEB APP
-* @desc		Main SASS File
 */
-
-/* SETTINGS */
 
 /* ACTIVE STATE */
 /* Main Container for Map */
@@ -25,7 +22,7 @@
 
 /*NAVIGATION MENU*/
 #nav-menu{
-  // background: black;
+  //background: black;
   height: 25vh;
   position: fixed;
   margin-top: 75vh;
@@ -41,14 +38,35 @@
   }
 
   .item-cont{
-    // background: aqua;
+    background: aqua;
     opacity: 1;
     padding-bottom: 25%;
+    height: 20vh;
   }
 
-  h5, h2 {
+  #submitBtn{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(100,0,0,0.5);
+    border: 0px;
+  }
+
+  h2{
     color: white;
-    font-family: 'helvetica';
+    font-family: 'helvetica', sans-serif;
+    font-size: 1em;
+    text-transform: uppercase;
+    letter-spacing: 0.25em;
+    text-align: center;
+    z-index: 101;
+  }
+
+  //.ng-click-active{
+  //  //background: yellow;
+  //}
+
+  .active{
+    background: yellow;
   }
 
 }
