--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
@@ -2,7 +2,7 @@
 
     <div class="map" layout="column" layout-align="center center">
 
-        <h1>{{active_ind}}</h1>
+        <h1>{{active_ind.industry}}</h1>
 
     </div>
 
