--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/scss/main.scss
@@ -22,13 +22,23 @@ $primary-font-size: 19pt;
 //$title-font-size: 33pt; //this is start btn on idle - should really just import that btn but justin case!
 
 h1{
-  font-size: 19pt;
+  // font-size: 19pt;
+  font-size: 14pt;
   font-family:$primary-font;
 }
 
 //                 S C R E E N
 // ---------------------------
+body,
+html {
+  position: fixed;
+}
 
+.border{
+  border-left: 3pt;
+  border-left-style: solid;
+  border-left-color: $white;
+}
 
 
 /* ACTIVE STATE */
@@ -70,7 +80,7 @@ h1{
     // background: aqua;
     opacity: 1;
     padding-bottom: 25%;
-    height: 20vh;
+    height: 25vh;
   }
 
   .item-title{
@@ -79,7 +89,7 @@ h1{
     text-transform: uppercase;
     text-align: center;
     z-index: 101;
-    margin-top: 12.8vh;
+    // margin-top: 12.8vh;
     width: 70%;
   }
 
@@ -90,7 +100,8 @@ h1{
 
   .active{
     background: $white;
-    height:30vh;
+    z-index: 200;
+    // height:30vh;
 
       .item-cont{
         background: $white;
@@ -98,7 +109,7 @@ h1{
       .item-title{
         color: $secondary-dark-blue;
         font-weight: bolder;
-        margin-top: 0.6em;
+        // margin-top: 0.6em;
       }
       .item-thumb{
         height: 12.8vh;
