--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/views/navigation.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/views/navigation.html
@@ -2,11 +2,13 @@
 
   <div layout="row" class="main-nav" layout-align="space-around center" >
       <div flex class="nav-item" ng-class="{active : activeId === $index}" ng-repeat="ind in inds" ng-click="industryBtn($index)" layout="row" layout-align="center start" >
-          <div flex class="item-cont" layout="column" layout-align="space-between center" layout-margin>
-              <div ng-show="activeId === $index" class="item-thumb" ng-click="sendUDP(ind.udp)">
-                <img src="http://placehold.it/500x281">
-              </div>
-              <h1 class="item-title">{{ind.industry}}</h1>
+          <div flex class="item-cont" layout="column" layout-align="end stretch" layout-margin>
+                <div ng-class="{border : $index !== 0}" layout="column"  layout-align="space-between center">
+                    <div ng-show="activeId === $index" class="item-thumb" >
+                        <img src="http://placehold.it/500x281" ng-click="sendUDP(ind.udp)">
+                    </div>
+                    <h1 class="item-title">{{ind.industry}}</h1>
+                </div>
           </div>
       </div>
 
