begin two step UDP play mechanism

--- a/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
+++ b/WIP-EXAMPLES/ANGULAR-WEB-APP/views/main-screen.html
@@ -2,7 +2,9 @@
 
     <div class="map" layout="column" layout-align="center center">
 
-        <h1>{{active_ind.industry}}</h1>
+        <!-- the industry directive will bind here
+        this will overlay relevant information once an industry is selected. -->
+        <in-active class="in-active"></in-active>
 
     </div>
 
